# telsim

./: .gitignore  README.md  index.js  package-lock.json  package.json
client/: ColorPicker.py  HistoryL.py  callexample.py  callobj.py  controller.py  drone.py  fsm.py  network.py  planner.py  recognition.py  repl.py  status.py  target.odg  test-color-recognition.py  test-feature-matching.py  test-target-recognition.py  test.py  video.py
client/h264decoderpi3/: CMakeLists.txt
renderer/: index.html
renderer/assets/: copter.stl
renderer/js/: command.js  command_functions.js  renderer.js  socket_communication.js  tello_translate.js  ui.js
renderer/style/: control-surface.css  main.css
